[metadata]
name = Terra
# Version needs regex in setup.py.
; url = VSC_URL
;project_urls =
;    Documentation = https://...
;    Code = https://...
;    Issue tracker = https://...
author = Antonio Arbues
author_email = avarbues@gmail.com
description = Terra
long_description = file: README.md
long_description_content_type = text/x-rst
classifiers =
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.11

# [options.entry_points]
# console_scripts =
#     command=bin.APP_NAME:main  # put your shell execution scritps to bin forlder

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests

ilterwarnings =

    error